# dhewm3

./: cmake-vs2013-32bit.bat  cmake-vs2013-64bit.bat
base/glprogs/GLSL/: ambientInteraction_120.fs  ambientInteraction_120.vs  filmgrain.fs  filmgrain.vs  interaction_120.fs  interaction_120.vs  shadowmapping_120.vs
base/glprogs/GLSL/GL3/: PBR_interaction_300.fs  ambientInteraction_300.fs  ambientInteraction_300.vs  blur_300.fs  blur_300.vs  bumpyenvironment_300.fs  bumpyenvironment_300.vs  environment_300.fs  environment_300.vs  filmgrain_300.fs  filmgrain_300.vs  interaction_300.fs  interaction_300.vs  stencilshadow_300.fs  stencilshadow_300.vs  vignete_300.fs  vignete_300.vs
cm/: CollisionModel_load.cpp
d3xp/: CMakeLists.txt
d3xp/gamesys/: Class.cpp
framework/: Common.cpp  DeclFX.cpp  Session.cpp
game/: AF.h  AFEntity.cpp  BrittleFracture.cpp  CMakeLists.txt  Entity.cpp  Fx.cpp  Game_local.cpp  Light.cpp  Misc.cpp  Moveable.cpp  PlayerIcon.cpp  Projectile.cpp  SmokeParticles.cpp  Target.cpp
game/anim/: Anim.h  Anim_Blend.cpp  Anim_Testmodel.cpp
game/gamesys/: Class.cpp  SaveGame.cpp  SaveGame.h
game/physics/: Physics.h
idlib/: CMakeLists.txt  Dict.h  Heap.h  Lib.cpp
idlib/containers/: StaticList.h  nmMap.h
idlib/math/: Lcp.cpp  Simd.cpp  Simd_Generic.cpp  Simd_SSE.cpp
libs/: CMakeLists.txt
libs/ktx/include/: ktx.h
libs/openal/: CMakeLists.txt
renderer/: GuiModel.cpp  GuiModel.h  Interaction.h  Material.cpp  Material.h  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld.h  RenderWorld_demo.cpp  RenderWorld_load.cpp  VertexCache.cpp  VertexCache.h  tr_backend.cpp  tr_font.cpp  tr_lightrun.cpp  tr_local.h  tr_main.cpp  tr_render.cpp  tr_rendertools.cpp
renderer/drawprogs/: FrameBuffer.cpp  FrameBuffer.h  draw_arb2.cpp  draw_common.cpp  draw_glsl.cpp  draw_glsl.h
renderer/drawprogs/shadingsis/: glslshading.cpp  glslshading.h  shader_Headers.h  sl_def - Copia.h  sl_def.h
renderer/imagefiles/: Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  MegaTexture.cpp  MegaTexture.h  images_GL.cpp  images_GL.h
renderer/model/: Model.cpp  ModelDecal.cpp  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  Model_ase.cpp  Model_beam.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_ma.cpp  Model_md3.cpp  Model_md5.cpp  Model_prt.cpp  Model_sprite.cpp
renderer/tr_local/: tr_cubemap.cpp  tr_cubemap.h
sys/: glimp.cpp  platform.h
sys/win32/: win_main.cpp  win_syscon.cpp
sys/win32/rc/: nms-doom3.rc
tools/: edit_public.h  edit_stub.cpp
tools/comafx/: CSyntaxRichEditCtrl.h
tools/compilers/dmap/: optimize.cpp  tritjunction.cpp  usurface.cpp
tools/compilers/renderbump/: renderbump.cpp
tools/script/: DialogScriptEditor.cpp  DialogScriptEditor.h
ui/: GameBustOutWindow.cpp  MarkerWindow.cpp
